--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Vincent Angelo</span></p>
-                      <p><span class="title-s">Profile: </span> <span>Android Developer, Data Scientist</span></p>
+                      <p><span class="title-s">Profile: </span> <span> Self taught iOS Developer, Android Developer, Data Scientist</span></p>
                       <p><span class="title-s">Email: </span> <span>vincentangelo96@yahoo.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>(+62) 878 - 8411 - 1333</span></p>
                     </div>
@@ -101,7 +101,12 @@
                 </div>
                 <div class="skill-mf">
                   <p class="title-s">Skill</p>
-                  <span>Java</span> <span class="pull-right">80%</span>
+                  <span>Swift</span> <span class="pull-right">75%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="85" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>Java</span> <span class="pull-right">70%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
